2010-06-21  Takashi Masuda  <masutaka@nifty.com>

	* twittering-mode.el: Add text properties to "%C".
	(twittering-generate-formater-for-first-spec): use
	`twittering-make-time-string' instead of `format-time-string'.
	(twittering-make-time-string): new function.

2011-05-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the message for dead process on basic
	authentication.
	(twittering-verify-credentials): make the message for dead process
	on basic authentication similar as that on OAuth/xAuth
	authentication.

	* twittering-mode.el: Fix the display of messages about
	authorization.
	(twittering-send-http-request): do not display a message on
	authorization.
	(twittering-http-get-verify-credentials-sentinel): directly
	display a message whether the authorization succeeded or not.
	`twittering-send-http-request' does not display it.

	* twittering-mode.el: Add the variable
	`twittering-disable-overlay-on-too-long-string' in order to avoid
	interference between the update of overlay and some input
	methods.
	(twittering-disable-overlay-on-too-long-string): new variable.
	(twittering-edit-length-check): do not update the overlay if
	`twittering-disable-overlay-on-too-long-string' is non-nil.

2011-05-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Ensure that a sentinel is invoked when a
	process is started successfully.
	(twittering-process-alive-p): new function.
	(twittering-start-process-with-sentinel): new function.
	(twittering-send-http-request-native): ensure that the given
	sentinel is invoked when the process is started successfully.
	(twittering-send-http-request-curl): replace `start-process' with
	`twittering-start-process-with-sentinel' in order to ensure that
	the sentinel is invoked.
	(twittering-send-http-request-wget): likewise.

	* twittering-mode.el: Confirm that the process is alive on waiting
	for its sentinel.
	(twittering-oauth-get-token-alist): check whether the process is